--- a/app/src/main/res/layout/activity_add__item.xml
+++ b/app/src/main/res/layout/activity_add__item.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <TextView
+   <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="ADD ITEM "
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="150dp"
         android:textStyle="bold"
         android:textSize="15dp"
         android:layout_marginLeft="10dp"
@@ -44,7 +44,7 @@
         android:hint="Enter model no."
         android:textSize="15dp"
         android:background="@drawable/border_table"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="150dp"
         android:layout_marginLeft="130dp"/>
         <TextView
         android:id="@+id/additem_dom"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="250dp"
         android:textSize="15dp"
         android:textStyle="bold"
         android:layout_marginLeft="10dp"
@@ -65,7 +65,7 @@
         android:layout_height="32dp"
         android:layout_below="@+id/textView2"
         android:layout_marginLeft="130dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="250dp"
         android:textSize="15dp"
         android:background="@drawable/border_table"
         android:hint="Enter office no."/>
@@ -75,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textView2"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="250dp"
+            android:layout_marginTop="200dp"
             android:textSize="15dp"
             android:textStyle="bold"
             android:layout_marginLeft="10dp"
@@ -89,37 +89,19 @@
             android:layout_height="32dp"
             android:layout_below="@+id/textView2"
             android:layout_marginLeft="130dp"
-            android:layout_marginTop="250dp"
+            android:layout_marginTop="200dp"
             android:textSize="15dp"
             android:background="@drawable/border_table"
             android:hint="Enter serial no."/>
-    <TextView
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="350dp"
-        android:text="Barcode Generator"
-        android:textStyle="bold"
-        android:id="@+id/specification"
-        android:layout_marginLeft="10dp"/>
-    <Button
-        android:id="@+id/additem_genbtn"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/textView2"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="350dp"
-        android:textSize="15dp"
-        android:hint="Generator"
-       />
 
-    <TextView
+        <TextView
         android:id="@+id/supplier"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="413dp"
+        android:layout_marginTop="300dp"
         android:textSize="15dp"
         android:text="Supplier name:"
         android:textStyle="bold"
@@ -131,7 +113,7 @@
         android:layout_height="32dp"
         android:layout_below="@+id/textView2"
         android:layout_marginLeft="130dp"
-        android:layout_marginTop="413dp"
+        android:layout_marginTop="300dp"
         android:textSize="15dp"
         android:background="@drawable/border_table"
         android:hint="Enter supplier name"/>
@@ -155,30 +137,7 @@
 
            android:entries="@array/select"
             android:layout_marginLeft="120dp"></Spinner>
-    <TextView
-        android:id="@+id/itemname"
-        android:layout_width="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="150dp"
-        android:textSize="15dp"
-        android:text="Company Name:"
-        android:textStyle="bold"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <EditText
-            android:id="@+id/itemnameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:layout_below="@+id/textView2"
-            android:layout_marginLeft="130dp"
-            android:textSize="15dp"
-            android:layout_marginTop="150dp"
-
-            android:background="@drawable/border_table"
-            android:hint="Enter name" />
     <TextView
         android:id="@+id/mobileno"
         android:layout_width="90dp"
@@ -187,7 +146,7 @@
         android:layout_marginLeft="10dp"
         android:layout_below="@+id/textView2"
         android:textSize="15dp"
-        android:layout_marginTop="470dp"
+        android:layout_marginTop="350dp"
         android:text="Mobile no:"
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -198,7 +157,7 @@
             android:layout_height="32dp"
             android:layout_below="@+id/textView2"
             android:layout_marginLeft="130dp"
-            android:layout_marginTop="470dp"
+            android:layout_marginTop="350dp"
             android:maxLength="10"
             android:inputType="number"
             android:background="@drawable/border_table"
@@ -212,7 +171,7 @@
             android:layout_marginLeft="10dp"
             android:layout_below="@+id/textView2"
             android:textSize="15dp"
-            android:layout_marginTop="530dp"
+            android:layout_marginTop="400dp"
             android:text="Quantity:"
             android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -223,7 +182,7 @@
             android:layout_height="32dp"
             android:layout_below="@+id/textView2"
             android:layout_marginLeft="130dp"
-            android:layout_marginTop="530dp"
+            android:layout_marginTop="400dp"
 
             android:inputType="number"
             android:background="@drawable/border_table"
@@ -237,22 +196,23 @@
             android:layout_marginLeft="10dp"
             android:layout_below="@+id/textView2"
             android:textSize="15dp"
-            android:layout_marginTop="590dp"
+            android:layout_marginTop="450dp"
             android:text="Date:"
             android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <EditText
+        <Button
             android:id="@+id/additem_dateET"
-            android:layout_width="274dp"
+            android:layout_width="150dp"
             android:layout_height="32dp"
             android:layout_below="@+id/textView2"
             android:layout_marginLeft="130dp"
-            android:layout_marginTop="590dp"
+            android:layout_marginTop="450dp"
+            android:text="Select"
 
             android:inputType="number"
             android:background="@drawable/border_table"
-            android:hint="Enter date"
+
             android:textSize="15dp" />
 
 
@@ -261,9 +221,9 @@
         <Button
         android:id="@+id/submit_item"
         android:layout_width="210dp"
-        android:layout_height="37dp"
+        android:layout_height="47dp"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="650dp"
+        android:layout_marginTop="550dp"
 
         android:gravity="center"
         android:text="SUBMIT "
