--- a/app/src/main/res/layout/activity_stock__out.xml
+++ b/app/src/main/res/layout/activity_stock__out.xml
@@ -18,6 +18,13 @@
             android:textSize="25dp"
             android:background="#F77F76"
             />
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:paddingTop="30dp"
+            android:id="@+id/stockout_tx1"
+            android:layout_marginLeft="300dp"
+            android:text="Page:"/>
         <TableLayout
             android:id="@+id/tab1"
             android:layout_width="match_parent"
@@ -49,7 +56,7 @@
                     android:onClick="scanQR"
                     android:text="Scan " />
             </TableRow>
-            <TableRow
+           <!-- <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:paddingTop="13dp">
@@ -71,38 +78,8 @@
                     android:entries="@array/select"></Spinner>
 
             </TableRow>
-
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_alignStart="@+id/tab1"
-                android:paddingTop="13dp">
-
-                <TextView
-                    android:id="@+id/itemname"
-                    android:layout_width="20dp"
-                    android:layout_height="wrap_content"
-                    android:text="Company name :"
-                    android:textSize="15dp"
-
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:id="@+id/stockout_itemnameET"
-                    android:layout_width="wrap_content"
-                    android:layout_height="28dp"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/border_table"
-                    android:hint="Enter name"
-                    android:textSize="15dp"
-
-
-                    />
-
-
-            </TableRow>
-
-            <TableRow
+-->
+           <!-- <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:paddingTop="13dp">
@@ -120,13 +97,13 @@
                     android:id="@+id/stockout_modelnoET"
                     android:layout_width="231dp"
                     android:layout_height="28dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter model no"
                     android:textSize="15dp" />
 
             </TableRow>
-
+-->
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
@@ -141,13 +118,13 @@
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
-                <EditText
+                <Button
                     android:id="@+id/stockout_dateET"
                     android:layout_width="231dp"
                     android:layout_height="28dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:background="@drawable/border_table"
-                    android:hint="Enter date"
+                    android:hint="Select"
                     android:inputType="number"
 
                     android:textSize="15dp" />
@@ -172,7 +149,7 @@
                     android:layout_width="231dp"
                     android:layout_height="28dp"
                     android:inputType="number"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter bill no. "
 
@@ -196,7 +173,7 @@
                     android:id="@+id/stockout_uniqIdET"
                     android:layout_width="231dp"
                     android:layout_height="28dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter customer ID"
                     android:textSize="15dp" />
@@ -222,7 +199,7 @@
                     android:layout_width="231dp"
                     android:layout_height="28dp"
                     android:background="@drawable/border_table"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
 
                     android:hint="Enter name "
 
@@ -250,7 +227,7 @@
                     android:layout_height="28dp"
                     android:width="100px"
                     android:hint="Enter contact no"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:inputType="number"
                     android:maxLength="10"
 
@@ -278,7 +255,7 @@
                     android:background="@drawable/border_table"
                     android:layout_height="28dp"
                     android:layout_marginRight="5dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:hint="Enter address"
                     android:textSize="15dp"
 
@@ -312,8 +289,9 @@
                     android:layout_height="28dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:hint=""
+                    android:inputType="number"
                     android:textSize="15dp"
 
 
@@ -341,8 +319,8 @@
                     android:layout_marginRight="5dp"
                     android:textSize="15dp"
                     android:background="@drawable/border_table"
-
-                    android:hint="Enter customer id"
+                    android:inputType="number"
+                    android:hint="Enter page no"
                     />
 
 
@@ -357,7 +335,7 @@
             android:layout_width="90dp"
             android:layout_height="32dp"
             android:layout_marginLeft="110dp"
-            android:layout_marginTop="677dp"
+            android:layout_marginTop="500dp"
             android:onClick="openStockInPage"
             android:text="Open page"
             android:textSize="10dp" />
@@ -367,7 +345,7 @@
             android:layout_height="30dp"
             android:src="@drawable/plus_button"
             android:layout_marginLeft="314dp"
-            android:layout_marginTop="677dp"
+            android:layout_marginTop="500dp"
             android:id="@+id/stockout_img"
             android:onClick="addstockOut"
 
@@ -376,7 +354,7 @@
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
-            android:layout_marginTop="730dp"
+            android:layout_marginTop="550dp"
             android:gravity="center"
             android:id="@+id/stockout_submitbtn"
             android:layout_marginLeft="130dp"
