--- a/app/src/main/res/layout/activity_stock_in.xml
+++ b/app/src/main/res/layout/activity_stock_in.xml
@@ -18,6 +18,13 @@
             android:text="Stock IN "
             android:textSize="25dp"
             android:textStyle="bold" />
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:paddingTop="30dp"
+            android:layout_marginLeft="300dp"
+            android:id="@+id/stockin_tx1"
+            android:text="Page:"/>
 
         <TableLayout
             android:id="@+id/tab1"
@@ -74,62 +81,18 @@
             </TableRow>
 
 
-            <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingTop="13dp">
 
-                <TextView
-                    android:id="@+id/additem_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:text="Company Name:"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/additem_nameET"
-                    android:layout_width="wrap_content"
-                    android:layout_height="28dp"
-                    android:background="@drawable/border_table"
-                    android:hint="Enter name"
-                    android:textSize="15dp" />
-
-            </TableRow>
 
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingTop="13dp">
-
-                <TextView
-                    android:id="@+id/additem_modelno"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:text="Model no:"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:id="@+id/additem_modelnoET"
-                    android:layout_width="match_parent"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/border_table"
-                    android:hint="Enter model no"
-                    android:textSize="15dp" />
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/add_item_storgloc"
                     android:layout_width="20dp"
-                    android:layout_height="35dp"
+                    android:layout_height="45dp"
                     android:text="Storage Location:"
                     android:textSize="15dp"
                     android:textStyle="bold" />
@@ -147,7 +110,7 @@
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/date"
@@ -157,13 +120,14 @@
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
-                <EditText
+                <Button
                     android:id="@+id/additem_dateET"
                     android:layout_width="match_parent"
                     android:layout_height="28dp"
                     android:background="@drawable/border_table"
-                    android:hint="Enter date"
-                    android:layout_marginTop="10dp"
+
+                    android:hint="Select"
+                    android:layout_marginTop="0dp"
                     android:inputType="number"
 
                     android:textSize="15dp" />
@@ -172,7 +136,7 @@
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/billno"
@@ -189,7 +153,7 @@
                     android:layout_height="28dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter bill no. "
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:inputType="number"
 
                     android:textSize="15dp" />
@@ -198,7 +162,7 @@
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/additem_storageLoca"
@@ -213,7 +177,7 @@
                     android:id="@+id/additem_suppID"
                     android:layout_width="match_parent"
                     android:layout_height="28dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
 
                     android:background="@drawable/border_table"
                     android:hint="Enter Supplier ID"
@@ -224,7 +188,7 @@
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/sname"
@@ -239,7 +203,7 @@
                     android:id="@+id/additem_snameET"
                     android:layout_width="match_parent"
                     android:layout_height="28dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:background="@drawable/border_table"
 
                     android:hint="Enter Supplier name "
@@ -250,7 +214,7 @@
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/conNo"
@@ -268,7 +232,7 @@
                     android:width="100px"
                     android:background="@drawable/border_table"
                     android:hint="Enter contact no"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:inputType="number"
                     android:maxLength="10"
 
@@ -279,7 +243,7 @@
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/address"
@@ -295,7 +259,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="28dp"
                     android:layout_marginRight="5dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter address"
                     android:textSize="15dp" />
@@ -307,7 +271,7 @@
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/availableQuantity"
@@ -325,7 +289,7 @@
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
                     android:hint=""
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="0dp"
                     android:inputType="number"
                     android:textSize="15dp"
                     />
@@ -336,11 +300,13 @@
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingTop="13dp">
+                android:layout_alignStart="@+id/tab1"
+                android:layout_alignBottom="@+id/tab1"
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/load"
-                    android:layout_width="60dp"
+                    android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     android:text="Open Page for edit:"
                     android:textSize="15dp"
@@ -352,7 +318,7 @@
                     android:layout_height="28dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
-                    android:hint="Enter supplier id."
+                    android:hint="Enter page no."
                     android:inputType="number"
                     android:textSize="15dp" />
 
@@ -367,7 +333,7 @@
             android:layout_width="90dp"
             android:layout_height="32dp"
             android:layout_marginLeft="110dp"
-            android:layout_marginTop="710dp"
+            android:layout_marginTop="680dp"
             android:onClick="openStockInPage"
             android:text="Open page"
             android:textSize="10dp" />
@@ -378,7 +344,7 @@
             android:layout_width="40dp"
             android:layout_height="30dp"
             android:layout_marginLeft="313dp"
-            android:layout_marginTop="720dp"
+            android:layout_marginTop="680dp"
             android:onClick="addStockIn"
             android:src="@drawable/plus_button" />
 
@@ -387,7 +353,7 @@
             android:layout_width="160dp"
             android:layout_height="45dp"
             android:layout_marginLeft="130dp"
-            android:layout_marginTop="740dp"
+            android:layout_marginTop="730dp"
             android:gravity="center"
             android:text="Submit" />
 
